--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "sass": "^1.81.0",
-    "vite-plugin-sass-dts": "^1.3.29"
+    "vite-plugin-sass-dts": "^1.3.29",
+    "vite-svg-loader": "^5.1.0"
   }
 }
